--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <p>Find a doctor, book a visit and solve any health-related doubt</p>
 <br><br> 
 <div class="select1">
-    <select>
-        <option>Choose country</option>
+    <select id="choose1">
+        <option >Choose country</option>
         <option value="#">Argentina</option>
         <option value="#">Brazil</option>
         <option value="#">Chile</option>
@@ -59,6 +59,7 @@
 </div>
 </div>
 </div>
+</div>
 <div class="card">
     <div class ="card2">
         <h4>For doctors</h4>
@@ -66,7 +67,7 @@
 <p>Save time managing visits and cut no-shows by half</p>
 <br><br>
 <div class="select2">
-    <select>
+    <select id="choose2">
         <option>Choose country</option>
         <option value="#">Argentina</option>
         <option value="#">Brazil</option>
@@ -90,7 +91,7 @@
     <p>Deliver an exceptional patient experience in your clinic</p>
 
     <div id="select3">
-        <select>
+        <select id="choose3">
           <option>2 to 20 specialists</option>
           <option value="#">Brazil</option>
           <option value="#">Czech</option>
@@ -100,7 +101,7 @@
           <option value="#">Spain</option>
           <option value="#">Turkey</option>
         </select>
-        <select>
+        <select id="choose3">
           <option>More than 20 specialis</option>
           <option value="#">Brazil</option>
           <option value="#">Italy</option>
@@ -118,12 +119,12 @@
       <div class="logo">
             <img src="https://docplanner-gomycode.onrender.com/Countrylogos/znanylekarz.png" alt="znanylekarz" height="13px" width="75px">
             <img src="https://docplanner-gomycode.onrender.com/Countrylogos/Doctoralia.png" alt="Doctoralia" height="13px" width="75px">
-        <br>
+
             <img src="https://docplanner-gomycode.onrender.com/Countrylogos/MioDottore.png" alt="MioDottore" height="13px" width="75px">
             <img src="https://docplanner-gomycode.onrender.com/Countrylogos/doktortakvimi.png" alt="doktortakvimi"height="13px" width="75px" >
         <br>   <img src="https://docplanner-gomycode.onrender.com/Countrylogos/Znamylekar.jpg" alt="Znamylekar"height="17px" width="75px" >
             <img src="https://docplanner-gomycode.onrender.com/Countrylogos/logo-jameda.svg" alt="jameda"height="17px" width="75px">
-            <br><img src="https://docplanner-gomycode.onrender.com/Countrylogos/logo-tuotempo.svg" alt="tuotempo" height="60px" width="75px">
+            <img src="https://docplanner-gomycode.onrender.com/Countrylogos/logo-tuotempo.svg" alt="tuotempo" height="60px" width="75px">
             <img src="https://docplanner-gomycode.onrender.com/Countrylogos/logo-gipo-primary.svg" alt="gipo"height="60px" width="75px">
             <br>
             <img src="https://docplanner-gomycode.onrender.com/Countrylogos/logo-clinicloud.svg" alt="clinicloud"height="35px" width="75px">
